/*
 * $Id: ChangeLog,v 1.3079 2004/06/17 19:42:09 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-06-18 10:10 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * contrib/mysql/mysql.c
    - HB_FUNC(FILETOSQLBINARY) fixed to use local filelength() and test return value
      Note: FILETOSQLBINARY() returns an empty string not a RT error, if _ANY_ errors are encountered
            such as hb_fsopen() failing ( file in use ) or hb_xgrab() failure ( insufficient memory ) .

2004-06-17 23:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/lict/screen2.prg
    ! Fixed SAYSCREEN() to work with empty strings.

2004-06-17 10:45 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    ! Fixed Normal Stringify and Smart Stringify to never stringify a Complex Macro '&(...)' and ommit the '&'.

  * include/hbver.h
    * Refreshed.

2004-06-17 15:35 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/gtsln/gtsln.c
    ! hack for bug in UTF-8 patched version of slang
      the characters SLSMG_UTEE_CHAR_TERM and SLSMG_DTEE_CHAR_TERM
      are replaced

2004-06-17 14:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/xprompt.sh
    * removed unnecessary comment line from pack_src.sh file

  * xharbour/bin/hb-func.sh
    * missing \ added
    * comdlg32 lib added for MINGW xhb* scripts - it's necessary for
      current GTWVT

  * xharbour/config/w32/mingw32.cf
    * comdlg32 lib added for MINGW xhb* scripts - it's necessary for
      current GTWVT

  * xharbour/source/vm/hvm.c
  * xharbour/source/vm/mainwin.c
    * force reference to WinMain for MINGW

2004-06-17 15:00 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbcolumn.prg
    * Fixed column heading to be of type character.

  * xharbour/source/rtl/tbrowse.prg